cluster/manifests/embedding-gateway/overlays/dev/endpoint-broadcaster/peer_authentication.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: endpoint-broadcaster
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: endpoint-broadcaster
  mtls:
    mode: STRICT
