cluster/manifests/embedding-gateway/overlays/dev/endpoint-broadcaster/sidecar.yaml
apiVersion: networking.istio.io/v1
kind: Sidecar
metadata:
  name: endpoint-broadcaster
spec:
  workloadSelector:
    labels:
      app.kubernetes.io/component: endpoint-broadcaster
  outboundTrafficPolicy:
    mode: REGISTRY_ONLY
  egress:
    - captureMode: DEFAULT
      hosts:
        - ./embedding-gateway-varnish-headless.embedding-gateway.svc.cluster.local
        - istio-system/istiod.istio-system.svc.cluster.local
        - otel/otel-agent.otel.svc.cluster.local
